--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "CC0-1.0"
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
+sphinx = "^2.4.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
